[package]
name = "vu-meter"
version = "1.0.0"
authors = ["Jonas Berlin <xkr47@outerspace.dyndns.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = [ "derive" ] }
itertools = "0.12.1"
jack = "0.11"
nix = { version = "0.28", features = [ "signal" ] }
serde_json = "1.0.116"
xcb = "1"
